Home Page styling Fixed leaderboard spacing

--- a/battleship/src/components/css/Scoreboard.css
+++ b/battleship/src/components/css/Scoreboard.css
@@ -46,7 +46,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin-left: 10%;
 }
 
 .homeTable thead {
